# SDN-Topology-Discovery-and-Pushing-into-Database

./: .flake8  .gitignore  README.md  controller.py  db.py  pyproject.toml  requirements.txt  ring.py  star.py  topology_leniar.py  topology_ring.py  topology_single.py
referances/Lab 4-5/ofctl/hub/: hub_flow.json
referances/Lab 4-5/ofctl/lb/: s1_flow1.json  s1_flow2.json  s1_flow3.json  s1_group50.json  s2_flow1.json  s2_flow2.json  s3_flow1.json  s3_flow2.json  s4_flow1.json  s4_flow2.json  s5_flow1.json  s5_flow2.json  s5_flow3.json  s5_group51.json  script.sh  topo.py
referances/Lab 4-5/ofctl/meter/: addmeter.json  switch_arp.json  switch_flow1.json  switch_flow2.json  switch_flow3.json
referances/Lab 4-5/ofctl/multitable/: table0_flow1.json  table10_arp.json  table10_flow1.json  table10_flow2.json  table10_flow3.json  table10_flow4.json  table5_flow1.json  table5_flow2.json
referances/Lab 4-5/ofctl/sniffer/: flow1.json  flow2.json  group50.json  group51.json
referances/Lab 4-5/ofctl/switch/: ._switch_flow4.json  switch_flow4.json
referances/Lab 4-5/ofctl/vlan/: flows.txt  switch_arp.json  switch_flow1.json  topology.py
referances/Lab 4-5/ryu_apps/: l4_switch.py
referances/Lab2-3/: 5.LAB-link_changes.py
referances/ryu_apps/: hub.py
