[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Suraj Mandal <surajmandalcell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mininet = "^2.3.0.dev6"
ryu = "^4.34"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
